--- a/css/custom.css
+++ b/css/custom.css
@@ -6,6 +6,7 @@
   color: #fff;
   transition: 0.3s;
   display:block;
+  opacity: 0.75;
 }
 
 #footer {
@@ -25,6 +26,7 @@ footer .socialicon {
   width: 64px;
   height: 64px;
   drop-shadow: 0px 0px 3px #fff;
+  opacity: 1;
 }
 
 body {
@@ -36,11 +38,11 @@ body {
   z-index: 0;
   color: #FFF;
   -webkit-filter: drop-shadow(3px 3px 10px #000);
+  opacity: 0.75;
   text-shadow: 0px 0px 6px #000;
   position: fixed;
   top: 35%;
   left: 40%;
-
   padding: 10px;
 }
 
@@ -79,6 +81,7 @@ body {
   overflow-x: hidden;
   transition: 0.2s;
   padding-top: 60px;
+  opacity: 0.8;
 }
 
 .sidenav a {
