--- a/css/custom.css
+++ b/css/custom.css
@@ -30,7 +30,7 @@ footer .socialicon {
 }
 
 body {
-  font-family: 'Patrick Hand', cursive;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 .ESA {
