--- a/css/custom.css
+++ b/css/custom.css
@@ -77,9 +77,9 @@ body {
 .subcontent h1 {
   font-family: 'Permanent Marker', cursive;
   padding-top: 10px;
-  color: #FFF;
-  -webkit-filter: drop-shadow(3px 3px 10px #000);
-  text-shadow: 0px 0px 6px #000;
+  color: #009574;
+  -webkit-filter: drop-shadow(3px 3px 10px #FFF);
+  text-shadow: 0px 0px 6px #FFF;
   font-size: 4em;
   border-bottom: rgba(0,255,255,0.90);
 }
@@ -90,6 +90,8 @@ body {
   padding-bottom: 15px;
   color: #000;
   font-size: 1.15em;
+  -webkit-filter: drop-shadow(3px 3px 10px #FFF);
+  text-shadow: 0px 0px 6px #FFF;
 }
 
 .sidenav {
