--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,5 @@
 #navbars {
-  font-family: 'Permanent Marker', cursive;
+  font-family: 'Source Sans Pro', sans-serif;
   -webkit-filter: drop-shadow(0px 0px 4px #000);
   font-size: 4em;
   cursor: pointer;
