--- a/css/custom.css
+++ b/css/custom.css
@@ -1,7 +1,8 @@
 #navbars {
   font-family: 'Karla', sans-serif;
+  font-weight: bolder;
   -webkit-filter: drop-shadow(0px 0px 4px #000);
-  font-size: 4em;
+  font-size: 3em;
   cursor: pointer;
   padding-left: 20px;
   color: #fff;
@@ -11,7 +12,7 @@
 }
 
 #logo {
-  opacity: 0.9;
+  opacity: 1;
   height: 100%;
   /*-webkit-filter: drop-shadow(0px 0px 5px #fff);*/
 }
