--- a/css/custom.css
+++ b/css/custom.css
@@ -176,3 +176,80 @@ body {
   background-size: cover;
   -o-background-size: cover;*/
 }
+
+#eboard strong {
+  font-weight: bold;
+}
+
+#eboard em {
+  padding-bottom:  10px;
+}
+
+#eboard h3 {
+  text-align: center;
+  font-size: 1.65em;
+  margin: 0 0 30px;
+}
+
+#eboard h2 {
+  margin:  0 0 10px;
+  margin-bottom:  1px;
+}
+
+#eboard div {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between; /* or space-around */
+  padding: 15px;
+}
+
+#eboard a {
+  display: inline-block;
+  margin-bottom: 8px;
+  width: calc(50% - 4px);
+  text-decoration: none;
+  color: black;
+}
+
+@media screen and (min-width: 50em) {
+  #eboard a {
+    width: calc(25% - 6px);
+  }
+}
+
+#eboard a:hover img {
+  transform: scale(1.15);
+}
+
+#eboard figure {
+  margin: 0;
+  overflow: hidden;
+}
+
+#eboard figcaption {
+  margin-top: 3px;
+  text-align: left;
+}
+
+#eboard img {
+  border: none;
+  max-width: 100%;
+  height: auto;
+  display: block;
+  background: #ccc;
+  transition: transform .2s ease-in-out;
+}
+
+#eboard .p a {
+  display: inline;
+  font-size: 13px;
+  margin: 0;
+  text-decoration: underline;
+  color: blue;
+}
+
+#eboard .p {
+  text-align: center;
+  font-size: 13px;
+  padding-top: 100px;
+}
