--- a/css/custom.css
+++ b/css/custom.css
@@ -218,7 +218,9 @@ body {
 }
 
 #eboard a:hover img {
-  transform: scale(1.15);
+  transform: scale(1.06) rotate(-1deg);
+  -ms-transform: scale(1.06) rotate(-1deg); /* IE 9 */
+  -webkit-transform: scale(1.06) rotate(-1deg); /* Chrome, Safari, Opera */
 }
 
 #eboard figure {
@@ -229,12 +231,18 @@ body {
 #eboard figcaption {
   margin-top: 3px;
   text-align: left;
+  z-index: 10;
+}
+
+#eboard h2 {
+  z-index: 100;
 }
 
 #eboard img {
+  z-index: -1;
   border: none;
   max-width: 100%;
-  height: auto;
+  max-height: 25%;
   display: block;
   background: #ccc;
   transition: transform .2s ease-in-out;
@@ -250,6 +258,79 @@ body {
 
 #eboard .p {
   text-align: center;
-  font-size: 13px;
+  font-size: 1.1em;
   padding-top: 100px;
+}
+
+
+.form-style-4{
+    width: 65%;
+    font-size: 1em;
+    background: #009574;
+    padding: 30px 30px 15px 30px;
+    border-radius: 5px;
+}
+.form-style-4 input[type=submit],
+.form-style-4 input[type=button],
+.form-style-4 input[type=text],
+.form-style-4 input[type=email],
+.form-style-4 textarea,
+.form-style-4 label
+{
+    font-size: 0.95em;
+    color: #fff;
+    -webkit-filter: drop-shadow(0px 0px 0px #000);
+    text-shadow: 0px 0px 0px #000;
+}
+.form-style-4 label {
+    display:block;
+    margin-bottom: 10px;
+}
+.form-style-4 label > span{
+    display: inline-block;
+    float: left;
+    width: 150px;
+}
+.form-style-4 input[type=text],
+.form-style-4 input[type=email]
+{
+    background: transparent;
+    border: none;
+    border-bottom: 1px dashed #fff;
+    width: 55%;
+    outline: none;
+    padding: 0px 0px 0px 0px;
+}
+.form-style-4 textarea{
+    font-style: italic;
+    padding: 0px 0px 0px 0px;
+    background: transparent;
+    outline: none;
+    border: none;
+    border-bottom: 1px dashed #fff;
+    width: 55%;
+    overflow: hidden;
+    resize:none;
+    height:20px;
+}
+
+.form-style-4 textarea:focus,
+.form-style-4 input[type=text]:focus,
+.form-style-4 input[type=email]:focus,
+.form-style-4 input[type=email] :focus
+{
+    border-bottom: 1px dashed rgba(255,255,255, 0.70);
+}
+
+.form-style-4 input[type=submit],
+.form-style-4 input[type=button]{
+    background: rgba(255,255,255, 1);
+    color: #009574;
+    border: none;
+    padding: 8px 10px 8px 10px;
+    border-radius: 5px;
+}
+.form-style-4 input[type=submit]:hover,
+.form-style-4 input[type=button]:hover{
+    background: rgba(255,255,255, 0.70);
 }
