--- a/css/custom.css
+++ b/css/custom.css
@@ -254,7 +254,7 @@ a:hover {
   }
 }
 
-.grid a:hover img {
+#members a:hover img {
   transform: scale(1.06) rotate(-1deg);
   -ms-transform: scale(1.06) rotate(-1deg); /* IE 9 */
   -webkit-transform: scale(1.06) rotate(-1deg); /* Chrome, Safari, Opera */
