--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,5 @@
 #navbars {
-  font-family: 'Karla', sans-serif;
+  font-family: 'Oswald', sans-serif;
   font-weight: bolder;
   -webkit-filter: drop-shadow(0px 0px 4px #000);
   font-size: 3em;
@@ -65,7 +65,7 @@ footer .socialicon {
 }
 
 body {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 a {
@@ -79,7 +79,6 @@ a:hover {
 }
 
 .ESA {
-  font-family: 'Karla', cursive;
   position: fixed;
   width: 70%; /* Set your desired with */
   z-index: 2; /* Make sure its above other items. */
@@ -116,7 +115,7 @@ a:hover {
 }
 
 .subcontent h1 {
-  font-family: 'Karla', cursive;
+  font-family: 'Oswald', sans-serif;
   padding-top: 10px;
   color: black;
   -webkit-filter: drop-shadow(3px 3px 10px #FFF);
@@ -136,7 +135,7 @@ a:hover {
 }
 
 .sidenav {
-  font-family: 'Karla', cursive;
+  font-family: 'Oswald', sans-serif;
   height: 100%;
   width: 0;
   position: fixed;
@@ -309,7 +308,6 @@ a:hover {
   font-size: 1.1em;
   padding-top: 100px;
 }
-
 
 .form-style-4{
     width: 65%;
