--- a/css/custom.css
+++ b/css/custom.css
@@ -192,7 +192,7 @@ a:hover {
 }
 
 /* Initially hide all section divs */
-#about, #initiatives, #eboard, #partners, #members, #newsletter, #contact{
+#about, #initiatives, #eboard, #partners, #members, #newsletter, #contact, #events{
   display: none;
 }
 
