--- a/css/custom.css
+++ b/css/custom.css
@@ -206,11 +206,11 @@ a:hover {
   width: 100%;
   height: 100%;
   z-index: 9999;
-  background: url('') no-repeat center center #000; /* Could add ESA logo if we want */
-  /* -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;*/
+  background: url('https://raw.githubusercontent.com/davidgarry1/ESA/master/images/esa-logo-large.png') no-repeat center center #000; /* Could add ESA logo if we want */
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
+  background-size: contain;
+  -o-background-size: contain;
 }
 
 .grid strong {
