--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,5 @@
 #navbars {
-  font-family: 'Palatino Linotype', serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: bolder;
   -webkit-filter: drop-shadow(0px 0px 4px #000);
   font-size: 4em;
@@ -115,7 +115,7 @@ a:hover {
 }
 
 .subcontent h1 {
-  font-family: 'Palatino Linotype', serif;
+  font-family: 'Montserrat', sans-serif;
   padding-top: 5px;
   color: black;
   -webkit-filter: drop-shadow(3px 3px 10px #FFF);
@@ -136,7 +136,7 @@ a:hover {
 
 
 .sidenav {
-  font-family: 'Palatino Linotype', serif;
+  font-family: 'Montserrat', sans-serif;
   height: 100%;
   width: 0;
   position: fixed;
